""

# buildifier: disable=module-docstring
module(
    name = "streamformat",
    version = "0.1",
    repo_name = "com_sacha_streamformat",
)

# Deps
bazel_dep(name = "rules_cc", version = "0.0.9")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)
